Reworked stacking logic
