# node/src/main/scala/tech/hearth/api/http/AddressApiRoute.scala
@@ -39,8 +39,8 @@ case class AddressApiRoute(
 
   override lazy val route: Route =
     pathPrefix("addresses") {
-      balanceDetails ~ validate ~ balance ~ balances ~ balancesPost ~ balanceWithConfirmations ~ deleteAddress ~
-        seq ~ publicKey ~ effectiveBalance ~ effectiveBalanceWithConfirmations ~ blsPublicKey
+      balanceDetails ~ validate ~ balance ~ balances ~ balancesPost ~ deleteAddress ~
+        seq ~ publicKey ~ blsPublicKey
     } ~ root ~ create
 
   def deleteAddress: Route = (delete & withAuth & path(AddrSegment)) { address =>
@@ -90,28 +90,6 @@ case class AddressApiRoute(
           )
         }
       )
-  }
-
-  def balanceWithConfirmations: Route = {
-    (path("balance" / AddrSegment / IntNumber) & get) { case (address, confirmations) =>
-      validateBalanceDepth(blockchain.height - confirmations)(
-        complete(balanceJson(address, confirmations))
-      )
-    }
-  }
-
-  def effectiveBalance: Route = {
-    path("effectiveBalance" / AddrSegment) { address =>
-      complete(effectiveBalanceJson(address, 0))
-    }
-  }
-
-  def effectiveBalanceWithConfirmations: Route = {
-    path("effectiveBalance" / AddrSegment / IntNumber) { (address, confirmations) =>
-      validateBalanceDepth(blockchain.height - confirmations)(
-        complete(effectiveBalanceJson(address, confirmations))
-      )
-    }
   }
 
   /** The endorser public key of one of this node's generators, so that an operator can see what a commitment from this
@@ -164,15 +142,7 @@ case class AddressApiRoute(
       ToResponseMarshallable(balances)
     }
 
-  private def balanceJson(acc: Address, confirmations: Int) = {
-    Balance(acc.toString, confirmations, commonAccountsApi.balance(acc, confirmations))
-  }
-
   private def balanceJson(acc: Address) = Balance(acc.toString, 0, commonAccountsApi.balance(acc))
-
-  private def effectiveBalanceJson(acc: Address, confirmations: Int) = {
-    Balance(acc.toString, confirmations, commonAccountsApi.effectiveBalance(acc, confirmations))
-  }
 
   private def validateBalanceDepth(height: Int): Directive0 = {
     if (height < blockchain.height - maxBalanceDepth)
